--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "compression": "^1.7.0",
     "express": "^4.15.4",
     "express-jwt": "^5.1.0",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.24",
