--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "PORT=3003 NODE_ENV=production forever start dist/bin/www.js",
+    "start": "PORT=3003 NODE_ENV=production API_ORIGIN=https://doogetha.com forever start dist/bin/www.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/bin/www.js\" ",
     "build": "tsc",
     "postinstall": "npm run build"
