--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
     "express": "^4.15.4",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.5",
     "jsonwebtoken": "^7.4.3",
     "mysql": "^2.13.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "passport-jwt": "^3.0.0"
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.24",
