--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^7.4.3",
     "mysql": "^2.13.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "nocache": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^6.0.80",
