--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./bin/www.js",
-    "starttestenv": "PORT=3003 NODE_ENV=production API_ORIGIN=https://doogetha.com forever start dist/bin/www.js",
+    "starttestenv": "PORT=3003 NODE_ENV=production JWT_SECRET=other API_ORIGIN=https://doogetha.com forever start dist/bin/www.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/bin/www.js\" ",
     "build": "tsc && cp -r package.json .ebextensions dist && cd dist && zip -r dist.zip *",
     "postinstall": "npm run build"
@@ -13,14 +13,14 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
+    "cookie-session": "^1.3.1",
     "express": "^4.15.4",
     "express-jwt": "^5.3.0",
-    "express-session": "^1.15.5",
     "jsonwebtoken": "^7.4.3",
     "mysql": "^2.13.0",
+    "nocache": "^2.0.0",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0",
-    "nocache": "^2.0.0"
+    "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^6.0.80",
