--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cookie-session": "^1.3.1",
     "express": "^4.15.4",
     "express-jwt": "^5.3.0",
+    "form-data": "^2.3.1",
     "jsonwebtoken": "^7.4.3",
     "mysql": "^2.13.0",
     "nocache": "^2.0.0",
+    "node-fetch": "^1.7.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
