--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nocache": "^2.0.0",
     "node-fetch": "^1.7.3",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
