--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "passport-google-oauth20": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.53",
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.12.0",
-    "typescript": "~2.6.0"
+    "@types/node": "^8.5.2",
+    "concurrently": "^3.5.1",
+    "nodemon": "^1.14.5",
+    "typescript": "^2.6.2"
   }
 }
