--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/bin/www.js",
+    "start": "node ./bin/www.js",
     "starttestenv": "PORT=3003 NODE_ENV=test JWT_SECRET=other API_ORIGIN=https://doogetha.com forever start dist/bin/www.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/bin/www.js\" ",
-    "build": "tsc && cp -r package.json .ebextensions dist && cd dist && zip -r dist.zip *",
+    "build": "tsc && cp -r package*.json .ebextensions dist && cd dist && zip -r dist.zip *",
     "postinstall": "tsc"
   },
   "private": true,
