--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./bin/www.js",
-    "starttestenv": "PORT=3003 NODE_ENV=test JWT_SECRET=other API_ORIGIN=https://doogetha.com forever start dist/bin/www.js",
+    "starttestenv": "PORT=3003 NODE_ENV=test JWT_SECRET=other API_ORIGIN=https://doogetha.com pm2 start dist/bin/www.js",
     "develop": "tsc && concurrently \"tsc -w\" \"nodemon dist/bin/www.js\" ",
     "build": "tsc && cp -r package*.json .ebextensions dist && cd dist && zip -r dist.zip *",
     "postinstall": "tsc",
